--- a/dissertation/bib.bib
+++ b/dissertation/bib.bib
@@ -362,3 +362,41 @@
     note="Last accessed: 17th March 2017"
 }
 
+@article{runeson2006survey,
+  title={A survey of unit testing practices},
+  author={Runeson, Per},
+  journal={IEEE software},
+  volume={23},
+  number={4},
+  pages={22--29},
+  year={2006},
+  publisher={IEEE}
+}
+
+@article{basanieri2000practical,
+  title={A practical approach to UML-based derivation of integration tests},
+  author={Basanieri, Francesca and Bertolino, Antonia},
+  journal={4th International Quality Week Europe},
+  year={2000}
+}
+
+@Misc{django-docs-templates,
+    title = {{Templates | Django Documentation}},
+    howpublished = "https://docs.djangoproject.com/en/1.10/topics/templates/",
+    author={Django},
+    note="Last accessed: 19th March 2017"
+}
+
+@Misc{bootstrap,
+    title = {{Bootstrap - The world's most popular mobile-first and responsive front-end framework.}},
+    howpublished = "https://getbootstrap.com/",
+    author={Bootstrap},
+    note="Last accessed: 19th March 2017"
+}
+
+@Misc{jquery,
+    title = {{jQuery}},
+    howpublished = "https://jquery.com/",
+    author={jQuery},
+    note="Last accessed: 19th March 2017"
+}
